--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -925,6 +925,17 @@
   year={2020}
 }
 
+@article{schad2021toward,
+  title={Toward a principled Bayesian workflow in cognitive science.},
+  author={Schad, Daniel J and Betancourt, Michael and Vasishth, Shravan},
+  journal={Psychological methods},
+  volumne={26},
+  issue={1},
+  pages={103--126},
+  year={2021},
+  publisher={American Psychological Association}
+}
+
 @book{GelmanEtAl2014,
   title={Bayesian data analysis},
   author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Dunson, David B and Vehtari, Aki and Rubin, Donald B},
@@ -1408,4 +1419,92 @@
   pages={1341},
   year={1994},
   publisher={American Psychological Association}
+}
+
+@article{zhang2008discrete,
+  title={Discrete fixed-resolution representations in visual working memory},
+  author={Zhang, Weiwei and Luck, Steven J},
+  journal={Nature},
+  volume={453},
+  number={7192},
+  pages={233--235},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
+@article{bays2009precision,
+  title={The precision of visual working memory is set by allocation of a shared resource},
+  author={Bays, Paul M and Catalao, Raquel FG and Husain, Masud},
+  journal={Journal of vision},
+  volume={9},
+  number={10},
+  pages={7--7},
+  year={2009},
+  publisher={The Association for Research in Vision and Ophthalmology}
+}
+
+@article{rhodes2020age,
+  title={Age differences in the precision of memory at short and long delays.},
+  author={Rhodes, Stephen and Abbene, Emily E and Meierhofer, Ashley M and Naveh-Benjamin, Moshe},
+  journal={Psychology and Aging},
+  volume={35},
+  number={8},
+  pages={1073},
+  year={2020},
+  publisher={American Psychological Association}
+}
+
+@article{souza2016no,
+  title={No age deficits in the ability to use attention to improve visual working memory.},
+  author={Souza, Alessandra S},
+  journal={Psychology and Aging},
+  volume={31},
+  number={5},
+  pages={456},
+  year={2016},
+  publisher={American Psychological Association}
+}
+
+@article{van2012variability,
+  title={Variability in encoding precision accounts for visual short-term memory limitations},
+  author={Van den Berg, Ronald and Shin, Hongsup and Chou, Wen-Chuang and George, Ryan and Ma, Wei Ji},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={109},
+  number={22},
+  pages={8780--8785},
+  year={2012},
+  publisher={National Acad Sciences}
+}
+
+@article{oberauer2017interference,
+  title={An interference model of visual working memory.},
+  author={Oberauer, Klaus and Lin, Hsuan-Yu},
+  journal={Psychological review},
+  volume={124},
+  number={1},
+  pages={21},
+  year={2017},
+  publisher={American Psychological Association}
+}
+
+@article{wagenmakers2007ez,
+  title={An EZ-diffusion model for response time and accuracy},
+  author={Wagenmakers, Eric-Jan and Van Der Maas, Han LJ and Grasman, Raoul PPP},
+  journal={Psychonomic bulletin \& review},
+  volume={14},
+  number={1},
+  pages={3--22},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{ratcliff2008diffusion,
+  title={The diffusion decision model: theory and data for two-choice decision tasks},
+  author={Ratcliff, Roger and McKoon, Gail},
+  journal={Neural computation},
+  volume={20},
+  number={4},
+  pages={873--922},
+  year={2008},
+  publisher={MIT Press}
 }
