--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -8,6 +8,70 @@
   publisher={Springer}
 }
 
+
+@article{AshbyAndMaddox1993,
+  title={Relations between prototype, examplar, and decision bound models of categorization.},
+  author={Ashby, F G and Maddox, W T},
+  journal={Journal of Mathematical Psychology},
+  volume={37},
+  number={3},
+  pages={372--400},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@article{MaddoxAndAshby1993,
+  title={Comparing decision bound and exemplar models of categorization},
+  author={Maddox, W T and Ashby, F G},
+  journal={Perception \& Psychophysics},
+  volume={53},
+  number={1},
+  pages={49--70},
+  year={1993},
+  publisher={Springer}
+}
+
+@article{NivEtAl2015,
+  title={Reinforcement learning in multidimensional environments relies on attention mechanisms.},
+  author={Niv, Yael and Daniel, Reka and Geana, Andra and Gershman, Samuel J and Leong, Yuan C and Radulescu, Angela and Wilson, Robert C},
+  journal={The Journal of Neuroscience},
+  volume={35},
+  number={21},
+  pages={8145--8157},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{WilsonAndNiv2012,
+  title={Inferring relevance in a changing world.},
+  author={Wilson, Robert C and Niv, Yael},
+  journal={Frontiers in Human Neuroscience},
+  volume={5},
+  pages={189},
+  year={2012}
+}
+
+@article{YuAndDayan2005,
+  title={Uncertainty, neuromodulation, and attention.},
+  author={Yu, Angela J and Dayan, Peter},
+  journal={Neuron},
+  volume={46},
+  number={4},
+  pages={681--692},
+  year={2005}
+}
+
+@article{MaddoxEtAl2013,
+  title={Dual systems of speech category learning across the lifespan.},
+  author={Maddox, W T and Chandrasekaran, Bharath and Smayda, Kirsten and Yi, Han-Gyol},
+  journal={Psychology and Aging},
+  volume={28},
+  number={4},
+  pages={1042--1056},
+  year={2013},
+  publisher={American Psychological Association}
+}
+
 @article{EtzEtAl2018,
   title={How to become a {B}ayesian in eight easy steps: An annotated reading list.},
   author={Etz, Alexander and Gronau, Quentin F and Dablander, Fabian and Edelsbrunner, Peter A and Baribault, Beth},
@@ -929,7 +993,7 @@
   title={Toward a principled Bayesian workflow in cognitive science.},
   author={Schad, Daniel J and Betancourt, Michael and Vasishth, Shravan},
   journal={Psychological methods},
-  volumne={26},
+  volume={26},
   issue={1},
   pages={103--126},
   year={2021},
@@ -1294,6 +1358,7 @@
   year={2016},
   publisher={Sage}
 }
+
 
 @book{lee2014bayesian,
   title={Bayesian cognitive modeling: A practical course},
