changes before submission

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -454,7 +454,7 @@
 }
 
 @book{GreenAndSwets1966,
- author = {Green, D. M. and Swets, J. A.},
+ author = {Green, D. M. and Swets, John A},
  title = {Signal detection theory and psychophysics},
  publisher = {Wiley},
  address = {New York},
@@ -1571,5 +1571,16 @@
   number={4},
   pages={873--922},
   year={2008},
+  publisher={MIT Press}
+}
+
+@article{jonides2000age,
+  title={Age differences in behavior and PET activation reveal differences in interference resolution in verbal working memory},
+  author={Jonides, John and Marshuetz, Christina and Smith, Edward E and Reuter-Lorenz, Patricia A and Koeppe, Robert A and Hartley, Alan},
+  journal={Journal of Cognitive Neuroscience},
+  volume={12},
+  number={1},
+  pages={188--196},
+  year={2000},
   publisher={MIT Press}
 }
